Update CompassScreen.java